clusters/cluster1/homeautomation/frigate/frigate.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frigate
  namespace: default
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: frigate
      app.kubernetes.io/name: frigate
  strategy:
    rollingUpdate: null
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: frigate
        app.kubernetes.io/name: frigate
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: coral
                operator: In
                values:
                - "true"
      containers:
      - env:
        - name: TZ
          value: America/Toronto
        # envFrom:
        # - secretRef:
        #     name: frigate-secret
        image: ghcr.io/blakeblackshear/frigate:0.18.0 # {"$imagepolicy": "flux-system:frigate"}
        # command: [ "sleep" ]
        # args: [ "infinity" ]
        imagePullPolicy: IfNotPresent
        name: frigate
        ports:
        - containerPort: 5000
          name: http
          protocol: TCP
        - containerPort: 8971
          name: auth-ui
          protocol: TCP
        - containerPort: 8554
          name: rtsp
          protocol: TCP
        - containerPort: 8555
          name: webrtc-tcp
          protocol: TCP
        - containerPort: 8555
          name: webrtc-udp
          protocol: UDP
        securityContext:
          privileged: true
        volumeMounts:
        - mountPath: /dev/apex_0
          name: coral-pci
        - mountPath: /config
          name: frigate-config
        - mountPath: /data
          name: data
        - mountPath: /dev/shm
          name: dshm
        - mountPath: /media/frigate
          name: frigate-data
        - mountPath: /media/frigate/recordings
          name: frigate-recording
        - mountPath: /media/frigate/clips
          name: frigate-recording
        resources:
          requests:
            cpu: 200m
            memory: 2Gi
          limits:
            cpu: "1"
            memory: 12Gi
      restartPolicy: Always
      securityContext:
        supplementalGroups:
        - 44
        - 109
        - 1001
      terminationGracePeriodSeconds: 30
      volumes:
      - hostPath:
          path: /dev/apex_0
          type: ""
        name: coral-pci
      - emptyDir: {}
        name: data
      - emptyDir:
          medium: Memory
          sizeLimit: 1Gi
        name: dshm
      - name: frigate-config
        persistentVolumeClaim:
          claimName: frigate-config-pvc
      - name: frigate-data
        persistentVolumeClaim:
          claimName: frigate-data-pvc
      - name: frigate-recording
        persistentVolumeClaim:
          claimName: frigate-recording-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: frigate
  namespace: default
  annotations:
    lbipam.cilium.io/ips: 10.10.10.66
spec:
  ports:
  - name: frigate-5000
    port: 5000
    protocol: TCP
    targetPort: 5000
  - name: frigate-8554
    port: 8554
    protocol: TCP
    targetPort: 8554
  - name: frigate-8555
    port: 8555
    protocol: TCP
    targetPort: 8555
  - name: frigate-8555-udp
    port: 8555
    protocol: UDP
    targetPort: 8555
  selector:
    app.kubernetes.io/name: frigate
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: frigate-auth
  namespace: default
spec:
  ports:
  - name: frigate-8971
    port: 8971
    protocol: TCP
    targetPort: 8971
  selector:
    app.kubernetes.io/name: frigate
  type: ClusterIP
---
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: frigate-recording-pvc
  namespace: default
spec:
  storageClassName: syno-nfs
  accessModes:
    - ReadWriteMany
  volumeName: frigate-recording-pv
  resources:
    requests:
      storage: 10Ti
---
apiVersion: v1
kind: PersistentVolume
metadata:
  name: frigate-recording-pv
spec:
  capacity:
    storage: 10Ti
  volumeMode: Filesystem
  accessModes:
    - ReadWriteMany
  persistentVolumeReclaimPolicy: Retain
  storageClassName: syno-nfs
  mountOptions:
    - hard
    - nfsvers=4
  nfs:
    path: /volume1/frigate
    server: 10.10.10.105
